<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AdminActivity"
    tools:showIn="@layout/activity_admin">

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/text_vertical_margin_large"
        android:layout_marginEnd="@dimen/text_horizontal_margin"
        android:hint="@string/title_editText_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/price_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/text_vertical_margin_standard"
        android:layout_marginEnd="@dimen/text_horizontal_margin"
        android:hint="@string/price_editText_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_editText" />

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/text_vertical_margin_standard"
        android:layout_marginEnd="@dimen/text_horizontal_margin"
        android:hint="@string/description_editText_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_editText" />

    <Button
        android:id="@+id/travel_deal_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_vertical_margin_standard"
        android:layout_marginTop="@dimen/text_vertical_margin_standard"
        android:layout_marginEnd="@dimen/text_vertical_margin_standard"
        android:text="@string/travel_deal_image_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_editText" />

    <ImageView
        android:id="@+id/travel_deal_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_vertical_margin_standard"
        android:layout_marginTop="@dimen/text_vertical_margin_standard"
        android:layout_marginEnd="@dimen/text_vertical_margin_standard"
        android:contentDescription="@string/travel_deal_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travel_deal_image_button"
        app:srcCompat="@android:color/transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>